--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,14 +1,16 @@
-<%= simple_form_for(@restaurant) do |f| %>
-  <%= f.error_notification %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
 
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :address %>
-    <%= f.input :phone_number %>
-    <%= f.input :category %>
-  </div>
+      <%= simple_form_for(@restaurant) do |f| %>
+        <%= f.error_notification %>
+        <%= f.input :name, placeholder: "Chez Miguel" %>
+        <%= f.input :address, placeholder: "13 Berlin Av.,Lisbon" %>
+        <%= f.input :phone_number, placeholder: "+351-949-434-555" %>
+        <%= f.input :category, placeholder: "italian" %>
+        <%= f.submit "Create", class: "btn btn-primary" %>
+      <% end %>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
+    </div>
   </div>
-<% end %>
+</div>
