--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,24 +1,25 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @restaurant.name %>
-</p>
+<h2><%= @restaurant.name %></h2>
 
-<p>
-  <strong>Address:</strong>
-  <%= @restaurant.address %>
-</p>
+<p>Address: <%= @restaurant.address %></p>
 
-<p>
-  <strong>Phone number:</strong>
-  <%= @restaurant.phone_number %>
-</p>
+<p>Phone number: <%= @restaurant.phone_number %></p>
 
-<p>
-  <strong>Category:</strong>
-  <%= @restaurant.category %>
-</p>
+<p>Category: <%= @restaurant.category %></p>
+
+<p>Reviews:</p>
+<ul>
+  <% if @restaurant.reviews.length == 0 %>
+    <li>no reviews yet</li>
+  <% else %>
+
+    <% @restaurant.reviews.each do |review| %>
+      <li><%= review.content %> - <%= review.rating %></li>
+    <% end %>
+
+  <% end %>
+</ul>
 
 <%= link_to 'Edit', edit_restaurant_path(@restaurant) %> |
 <%= link_to 'Back', restaurants_path %> |
