--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,1 +1,5 @@
-<h2>Let's create a new review!</h2>
+<h1 class="text-center">Add a review to <%= @restaurant.name %></h1>
+
+<%= render 'form', restaurant: @restaurant %>
+
+<%= link_to 'Back', restaurant_path(@restaurant) %>
