--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for(:title) do %>
+    <%= @restaurant.name %>
+<% end %>
+
 <h1 class="text-center">Add a review to <%= @restaurant.name %></h1>
 
 <%= render 'form', restaurant: @restaurant %>
